添加加密工具类

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     name: test
     url: jdbc:mysql://127.0.0.1:3306/rbac_db
     username: root
-    password: root
+    password: yf@123456
     # druid 连接池
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
